--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "phaser": "^3.70.0",
+    "sweetalert2": "^11.10.2"
   }
 }
